Fri Oct 24 02:09:51 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/internal/scl-macros.s: Added, provides MakePtr and
	DefSCLFnc macros.
	* riscos/redirect_setjmp.s: Make use of scl-macros.s.
	* riscos/chunkstub.s: Likewise.
	* riscos/chunkid01.s: Likewise.
	* riscos/chunkid02.s: Likewise.
	* riscos/chunkid04.s: Likewise.
	* riscos/chunkid05.s: Likewise.
	* incl-local/sys/cdefs.h(strong_alias,weak_function,
	weak_const_function,weak_alias): Added.

Mon Oct 13 02:19:00 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am: Fix typo.

Fri Jun 13 01:31:04 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>

	* include/string.h(stricmp,strnicmp): Added prototype.
	(strdup): Added malloc attribute.
	* include/stdlib.h(malloc,calloc): Added malloc attribute.
	* Makefile.am(string/strnicmp.c,string/stricmp.c): Added.
	* string/strnicmp.c: Link to UnixLib version.
	* string/stricmp.c: Link to UnixLib version.
	* string/strdup.c: Replaced by a link to UnixLib version.

Sun Feb  3 20:31:14 CET 2008  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/_exit.c (_Exit): Removed, we have this in our stubs defined.
	* stdio/fdopen.c (fdopen): Protected against silly fd values but the
	implementation looks wrong to me anyway.
	* stdio/fileno.c: Removed blank line.
	* Makefile.am: Added sources from stdio and string subdirectories.

Mon Jan 14 04:03:56 CET 2008  John Tytgat  <John.Tytgat@aaug.net>

	* include/stdio.h: Changed type FILE:__file from void* to int as
	it is like in the Castle C/C++ headers.

Sun Nov 25 11:36:06 PST 2007  Peter Naulls  <peter@chocky.org>

	* include/swis.h: Massive number of missing SWIs. Thanks to Rob F.
	Johnson.

Sun Nov 25 19:30:02 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* include/stdio.h: Removed multiple declarations of the same
	functions.

Tue Nov 13 00:12:05 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/chunkid01.s: End pointer of chunk branch table should point